# InFerm

./: Cargo.toml  README.md  memory.x  openocd-samd21.cfg  openocd.gdb
.cargo/: config
src/: main.rs  usb_serial.rs
