[package]
name = "in_ferm"
version = "0.1.0"
authors = ["maiso <michielaiso@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.arduino_nano33iot]
version = "0.4.0"
git = "https://github.com/maiso/atsamd"
branch = "arduino_nano_iot_wifi"
features = ["usb", "unproven"]

[dependencies]
cortex-m = "0.6"

[dependencies.arrayvec]
version = "0.5.2"
default-features = false 

[dependencies.cortex-m-rt]
version = "0.6.12"

[dependencies.usb-device]
version = "0.2"

[dependencies.usbd-serial]
version = "0.1"

[dependencies.wifi-nina]
version  = "0.1.2"